manifests/apps/maloja/maloja-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: maloja
  name: maloja
spec:
  ports:
    - name: "42010"
      port: 42010
      targetPort: 42010
  selector:
    service: maloja
