manifests/apps/maloja/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maloja
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`fm.krea.to`)"
      priority: 10
      services:
        - kind: Service
          name: maloja
          namespace: maloja
          passHostHeader: true
          port: 42010
          scheme: http
  tls:
    domains:
      - main: fm.krea.to
    secretName: wildcard-krea.to-tls
